gke-sample-k8s-ingress-app/my-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
    - hosts:
      - foo-bar.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo-bar.com
      secretName: medbridge-dev-secret
  rules:
    - host: foo-bar.com
      http:
        paths:
        - path: /
          backend:
            # This assumes http-svc exists and routes to healthy endpoints
            serviceName: hello-world
            servicePort: 60000
        - path: /kube
          backend:
            serviceName: hello-kubernetes
            servicePort: 80
