gke-sample-k8s-ingress-app/rediness-probe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.com/health-checks: "true"
spec:
  rules:
    - host: "cafe.example.com"
      http:
        paths:
          - path: /tea
            backend:
              serviceName: tea-svc
              servicePort: 80
          - path: /coffee
            backend:
              serviceName: coffee-svc
              servicePort: 80
          - path: /beer
            backend:
              serviceName: beer-svc
              servicePort: 80
